@@ -186,6 +186,8 @@ DELETED_MESSAGES = [
     DeletedMessage("W0142", "star-args"),
     # https://github.com/PyCQA/pylint/issues/2409
     DeletedMessage("W0232", "no-init"),
+    # https://github.com/PyCQA/pylint/pull/6421
+    DeletedMessage("W0111", "assign-to-new-keyword"),
 ]
 
 
